fix: update logo height on mobile

--- a/practice-one/src/stylesheets/layout/_menu.scss
+++ b/practice-one/src/stylesheets/layout/_menu.scss
@@ -125,6 +125,7 @@
 
     &__logo {
       width: 50%;
+      height: 50%;
     }
 
     &__nav {
